--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -2,4 +2,4 @@ server.port=8070
 eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka
