--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -1,5 +1,6 @@
 server.port=8070
 eureka.instance.hostname=localhost
-eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.dashboard.path=/dashboard
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
