--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -2,5 +2,5 @@ server.port=8070
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.dashboard.path=/dashboard
+eureka.dashboard.enabled=true
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
