--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -3,4 +3,4 @@ eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.dashboard.enabled=true
-eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
