--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -1,6 +1,11 @@
 server.port=8761
 eureka.instance.hostname=localhost
+
+#telling the server not to register himself in the service
 eureka.client.register-with-eureka=false
+
+#Eureka clients fetch the service registry (ServiceInstance : (URL, PORT, HOST)) from the Eureka server
 eureka.client.fetch-registry=false
+
 eureka.dashboard.enabled=true
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
