--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -9,3 +9,6 @@ eureka.client.fetch-registry=false
 
 eureka.dashboard.enabled=true
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+
+spring.freemarker.template-loader-path= classpath:/templates/
+spring.freemarker.prefer-file-system-access= false
