add api gateway configuration

--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -1,6 +1,12 @@
-server.port=8072
+server.port=8070
+eureka.instance.hostname=localhost
 
 eureka.instance.preferIpAddress=true
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eurela.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
+
+#telling the server not to register himself in the service
+eureka.client.register-with-eureka=true
+
+#Eureka clients fetch the service registry (ServiceInstance : (URL, PORT, HOST)) from the Eureka server
+eureka.client.fetch-registry=true
+
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
