--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -9,4 +9,4 @@ eureka.client.register-with-eureka=true
 #Eureka clients fetch the service registry (ServiceInstance : (URL, PORT, HOST)) from the Eureka server
 eureka.client.fetch-registry=true
 
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:8070/eureka/
